fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -18,5 +18,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  gap: 2rem;
+}
+
+.app-description {
+  margin-top: -2rem;
 }
